--- a/Hoofdstukken/ontwerp/detail/client.tex
+++ b/Hoofdstukken/ontwerp/detail/client.tex
@@ -19,12 +19,12 @@ Op deze manier kan de Haskell kant bepalen wat er moet gebeuren tijdens het drag
 
 \subsubsection{Acties}
 De programmeur kan een aantal specifieke acties uitvoeren op de client. De state van deze acties wordt onderhouden door de client zelf.
--TODO: Referentie naar de specifieke sectie in de grafische bibliotheek
+\todo{Referentie naar de specifieke sectie in de grafische bibliotheek}
 
 \paragraph{Browserrestricties}
 Canvas.hs bied de optie om de canvas in volledigscherm te laten weergeven. Door veiligheidsfunctionaliteiten in de huidige webbrowsers is het niet mogelijk om direct naar volledigscherm te gaan met behulp van JavaScript. Dit is alleen mogelijk vanuit klik- en toetsenbordevents. Daarom krijgt de gebruiker eerst een menu te zien voordat de browser naar volledigscherm gaat. Dezelfde veiligheidsrestricties zijn er voor het bestandenselectiemenu hierdoor heeft Canvas.hs daar ook een menu voor.
 
--TODO: Referentie naar de grafische bibliotheek over volledigscherm
+\todo{Referentie naar de grafische bibliotheek over volledigscherm}
 
 \paragraph{Debug Console}
 Voor de programmeur die gebruik gaat maken van de Canvas.hs library is het belangrijk dat zijn interface er zo uit ziet zoals hij dit wil. Ongetwijfeld zal een programmeur tegen problemen aanlopen bij het bouwen van de interface die hij niet had voorzien bij het schrijven van zijn code. Om probleemoplossing hiervan te vergemakkelijken bevat Canvas.hs een debug console bevat waar het aanroepen van teken functies en de invloed van deze API aanroepen goed visueel en tekstueel inzichtelijk worden. Doormiddel van een actie vanuit het programma van de gebruiker kan de debug console tevoorschijn gehaald worden.
