--- a/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
+++ b/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
@@ -48,11 +48,11 @@ We wilden voorkomen dat gebruikers bij bijvoorbeeld events steeds moeten aangeve
 
 Onze oplossing is een \inlinecode{Default} typeklasse, een Event heeft een record met velden voor het ID en een aantal booleans voor of hij geinteresseerd is in Events, dit record derived \inlinecode{Defaults} en die typeklasse heeft een functie \inlinecode{defaults}. Deze functie geeft een standaard record terug die leeg is, het ID is leeg en de shape is (met dat record) niet geinteresseerd in events, de gebruiker kan dan die defaults bewerken om de shape een ID te geven en geinteresseerd te laten zijn in events. Een voorbeeld hiervan is hierboven al gegeven, het record gegeven door de \inlinecode{defaults} record is bewerkt en het eventId is "mickey" geworden, verder is de vorm nu geinteresseerd in muiskliks.
 
--TODO: Ontwerpkeuze: Boomstructuur en modifiers vs attributen op een element
--TODO: Ontwerpkeuze: Referentie van specifieke elementen met behulp van ID toelichten
--TODO: Ontwerpkeuze: Default values
--TODO: Ontwerpkeuze: Hulpfuncties zoals shape
--TODO: Ontwerpkeuze: Toelichten acties
--TODO: Ontwerpkeuze: Toelichten van de keuze voor Fullwindow Zie \url{https://drive.google.com/#folders/0B97Qa5VgdaDNWjBiOGFEa3JMZHc}
--TODO: Toelichten waarom we blocking actions hebben
--TODO: Ontwerpkeuze toelichten: Super key wordt niet als modifier gezien
+\todo{Ontwerpkeuze: Boomstructuur en modifiers vs attributen op een element}
+\todo{Ontwerpkeuze: Referentie van specifieke elementen met behulp van ID toelichten}
+\todo{Ontwerpkeuze: Default values}
+\todo{Ontwerpkeuze: Hulpfuncties zoals shape}
+\todo{Ontwerpkeuze: Toelichten acties}
+\todo{Ontwerpkeuze: Toelichten van de keuze voor Fullwindow Zie https://drive.google.com/#folders/0B97Qa5VgdaDNWjBiOGFEa3JMZHc}
+\todo{Toelichten waarom we blocking actions hebben}
+\todo{Ontwerpkeuze toelichten: Super key wordt niet als modifier gezien}
