--- a/verslag.tex
+++ b/verslag.tex
@@ -1,6 +1,7 @@
 % !TEX spellcheck = nl_NL
 \documentclass[a4paper]{report}
 \usepackage{graphicx}
+\usepackage{todonotes}
 \usepackage[dutch]{babel} 
 \usepackage{enumerate}
 \usepackage[utf8]{inputenc} % Set input to UTF-8 to enable easy input of umlauts etc.
