--- a/Hoofdstukken/ontwerp/testresultaten.tex
+++ b/Hoofdstukken/ontwerp/testresultaten.tex
@@ -1,7 +1,7 @@
 \section{Testresultaten} \label{sec:testresultaten}
 
--TODO: Onderdeel over analyse van geheugengebruik schrijven
--TODO: Performance analyse van JavaScript onderdeel schrijven
+\todo{Onderdeel over analyse van geheugengebruik schrijven}
+\todo{Performance analyse van JavaScript onderdeel schrijven}
 
 Door de gebruik van voornamelijk twee verschillende programmeertalen zijn de tests voor deze toepassingen ook apart geschreven. Alle tests kunnen gezamelijk via cabal test aangeroepen worden. Dit vereist wel enige configuratie. Uitgebreide uitleg over het uitvoeren en ontwikkelen van tests is te vinden op de website van Canvas.hs: \url{http://canvashs.github.io/test.html}.
 
@@ -14,7 +14,7 @@ Voor de Haskell code zijn unit test ontwikkeld. De code coverage van de tests is
 \subsection{Performance analyse}
 Tijdens de ontwikkeling van de library is duidelijk geworden dat de performance van de geschreven programma's niet altijd optimaal is. Met name bij programma's die gebruik maken van \emph{timers} en bij programma's met grote \emph{spahe grafen}.
 
---TODO uitleggen
+\todo{uitleggen}
 
 Er waren vermoedens dat de oorzaak gevonden kon worden in het omzetten van \inlinecode{Strings} naar \inlinecode{ByteSrings} en vice versa.
 
