Verwerken deel van de feedback

--- a/Hoofdstukken/evaluatie.tex
+++ b/Hoofdstukken/evaluatie.tex
@@ -1,5 +1,5 @@
 \chapter{Evaluatie} \label{hoofdstuk:evaluatie}
-
+\todo{evaluatie tenopzichte van de requirements}
 \section{Verbeteringen en aanbevelingen}
 \subsection{Delta updates (met animaties)}
 
