Alle kleine aanpassingen van robert verwerkt

--- a/Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex
@@ -18,4 +18,4 @@ Dit alles zonder gebruik te hoeven maken van monadisch programmeren.
 In deze gebruikershandleiding zal worden toegelicht hoe met behulp van Canvas.hs een grafisch haskellprogramma geschreven kan worden. Er zullen een aantal simpele voorbeelden gegeven worden, vervolgens zullen alle mogelijke te tekenen vormen (\shapes), uit te voeren acties (\actions) en te verwachten events (\events) uitgebreid worden toegelicht. 
 
 \paragraph{Definities} 
-Een tweetal begrippen uit deze handleiding verdienen nog even aandacht. Allereerst wordt de lezer van de handleiding aangesproken, hiermee wordt de programmeur bedoelt, degene die de handler schrijft en met de Canvas.Hs bibliotheek werkt. Daarnaast wordt gesproken over de \emph{Gebruiker}, dit is de persoon die interactie met het programma heeft via de canvas.
+Een tweetal begrippen uit deze handleiding verdienen nog even aandacht. Allereerst wordt de lezer van de handleiding aangesproken, hiermee wordt de programmeur bedoeld, degene die de handler schrijft en met de Canvas.Hs bibliotheek werkt. Daarnaast wordt gesproken over de \emph{Gebruiker}, dit is de persoon die interactie met het programma heeft via de canvas.
