--- a/Hoofdstukken/appendices/gebruikershandleiding.tex
+++ b/Hoofdstukken/appendices/gebruikershandleiding.tex
@@ -1,4 +1,4 @@
-\chapter{Gebruikerhandleiding} \label{sec:gebruikershandleiding}
+\chapter{Gebruikershandleiding} \label{sec:gebruikershandleiding}
 
 \input{./Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex}
 \input{./Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex}
