--- a/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
+++ b/Hoofdstukken/ontwerp/detail/grafischebibliotheek.tex
@@ -53,6 +53,6 @@ Onze oplossing is een \inlinecode{Default} typeklasse, een Event heeft een recor
 \todo{Ontwerpkeuze: Default values}
 \todo{Ontwerpkeuze: Hulpfuncties zoals shape}
 \todo{Ontwerpkeuze: Toelichten acties}
-\todo{Ontwerpkeuze: Toelichten van de keuze voor Fullwindow Zie https://drive.google.com/#folders/0B97Qa5VgdaDNWjBiOGFEa3JMZHc}
+%\todo{Ontwerpkeuze: Toelichten van de keuze voor Fullwindow Zie https://drive.google.com/#folders/0B97Qa5VgdaDNWjBiOGFEa3JMZHc}
 \todo{Toelichten waarom we blocking actions hebben}
 \todo{Ontwerpkeuze toelichten: Super key wordt niet als modifier gezien}
