--- a/Hoofdstukken/ontwerp/detail/problemen.tex
+++ b/Hoofdstukken/ontwerp/detail/problemen.tex
@@ -1,18 +1,22 @@
 \subsection{Problemen}
 
-Gedurende het project zijn we een aantal problemen tegengekomen. \todo{Fix deze shizzle}Deze hadden te maken met zaken en dingen en hier mag meer tekst. Hieronder een kort overzicht van de belangrijkste problemen die zich tijdens het ontwerp en implementatie van het project hebben voorgedaan.
+Bij het ontwerp en implementatie van het project zijn er een aantal moeilijkheden geweest die het uiteindelijke ontwerp van Canvas.hs sterk hebben beïnvloed. Deze ontstonden onder andere door het ontwijken van het gebruik van monadisch programmeren voor de student en door de samenwerking tussen Haskell en Javascript. Hieronder een kort overzicht van deze belangrijkste problemen.
 
 \subsubsection{Haskell interface}
 Doordat zowel het tekenen van grafische elementen als het uitvoeren van IO acties normaal gesproken via (een monadlaag op) de IO-monad verlopen moet Canvas.hs deze beide mogelijk maken. Hierdoor is de interface voor de user applicatie erg uitgebreid. 
+
 Er moest een manier gevonden worden zodat de handler zowel acties als grafische elementen kon opleveren, en het ook mogelijk is om slechts één van beide door te geven. Dit is gedaan door deze te verpakken in een tuple van een te tekenen grafisch element en een lijst van uit te voeren acties. Helaas resulteert dit in de user application in code die niet altijd even goed leesbaar is, daarom zijn er een tweetal hulpfuncties in het leven geroepen, \inlinecode{shape} en \inlinecode{actions}, die de leesbaarheid in de user application verhogen.
 
 \paragraph{Acties met resultaat}
-Naast het bovenstaande zijn er nog een probleem met acties. Sommige acties hebben geen resultaat, zoals bijvoorbeeld het aanzetten van de Debug-console, of ze hebben pas later resultaat, zoals bijvoorbeeld het starten van een Timer of het vragen om een bestand van de gebruiker. Echter zijn er ook acties, zoals het openen van een bestand, die onmiddellijk resultaat opleveren. 
-Dit laatste type actie kan niet met een grafische boom gecombineerd worden. Als dit wel toegestaan zou zijn kan er een onduidelijkheid ontstaan. De actie zou dan worden uitgevoerd en een resultaat opleveren dat vervolgens weer door de user applicatie wordt verwerkt. Hieruit zou weer een nieuwe grafische boom kunnen komen. Er zijn dan twee aparte grafische bomen, waarvan er slechts één naar de Javascript applicatie kan worden gestuurd. De user applicatie zou zelfs weer zo'n actie op kunnen leveren, waardoor er drie te versturen elementen zouden kunnen liggen, etc. 
+Naast het bovenstaande is er nog een probleem met acties. Sommige acties hebben geen resultaat, zoals bijvoorbeeld het aanzetten van de Debug-console, of ze hebben pas later resultaat, zoals bijvoorbeeld het starten van een Timer of het vragen om een bestand van de gebruiker. Echter zijn er ook acties, zoals het openen van een bestand, die onmiddellijk resultaat opleveren. 
+
+Dit laatste type actie kan niet met een grafische boom gecombineerd worden. Als dit wel toegestaan zou zijn kan er een onduidelijkheid ontstaan. De actie zou dan worden uitgevoerd en een resultaat opleveren dat vervolgens weer door de user applicatie wordt verwerkt. Hieruit zou weer een nieuwe grafische boom kunnen komen. Er zijn dan twee aparte grafische bomen, waarvan er slechts één naar de Javascript applicatie kan worden gestuurd. De user applicatie zou zelfs weer zo'n actie op kunnen leveren, waardoor er drie te versturen grafische bomen zouden kunnen liggen, etc. 
+
 Er is daarom voor gekozen om de acties in twee types op te delen, acties die geen direct resultaat (\inlinecode{Action}) op leveren en acties die direct resultaat op leveren (\inlinecode{BlockingAction}). Van dit eerste kunnen er zoveel worden opgegeven als gewenst en deze kunnen gecombineerd worden met een te tekenen grafisch element. Het tweede type kan niet met een grafische boom gecombineerd worden en het resultaat kan ook uit slechts één zo'n actie bestaan. 
 
 \subsubsection{Aannamen gebruik}
 Bij het ontwerp van Canvas.hs is uitgegaan van de ervaring van de ontwerpers bij het vak functioneel programmeren. Veel ontwerpkeuzes zijn gemaakt rond het principe dat de interface van Canvas.hs zo simpel mogelijk moet zijn voor de student. Zo is er zo veel mogelijk gekozen voor simpele primitieven als String en Int. In het geval van interactie met de inhoud van bestanden, is gekozen voor het gebruik van Lazy ByteStrings om interactie met de inhoud mogelijk te maken zonder het hele bestand in het geheugen te laden.
+
 Er is voor gekozen om geen gebruik te maken van het Num-type uit fpprac. Zo is Canvas.hs ook bruikbaar zonder gebruik te maken van fpprac. Het is echter eenvoudig om in fpprac een koppeling met Canvas.hs te schrijven die gebruik maakt van het Num-type.
 
 \subsubsection{Verschillen systemen}
